# Data-Wizardry-with-Python

./: .gitlab-ci.yml  404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: deploy-docs.yml
cheatsheets/cheatsheets/: index.html
docs/: index.md
docs/cheatsheets/: cheatsheets.md
docs/getting-started/: 01-installation.md  02-python.md  03-uv.md  04-notebooks.md  05-quickstart.md  git-guide.md  installation.md  quickstart.md  r-to-python.md  spss-to-python.md
docs/guides/: python_basics_for_analysts.md  r-to-python.md  spss-to-python.md
docs/guides/pandas/: cheat_sheet.md  overview.md
docs/reference/: cheatsheets.md  glossary.md  resources.md
docs/tutorials/: 01-python-basics.md  02-pandas-fundamentals.md  03-data-visualization.md  04-statistical-analysis.md
getting-started/01-installation/: index.html
getting-started/02-python/: index.html
getting-started/03-uv/: index.html
getting-started/04-notebooks/: index.html
getting-started/05-quickstart/: index.html
getting-started/git-guide/: index.html
guides/pandas/cheat_sheet/: index.html
guides/pandas/overview/: index.html
guides/python_basics_for_analysts/: index.html
guides/r-to-python/: index.html
guides/spss-to-python/: index.html
notebooks/: 01-introduction.ipynb  01_into_and_data_loading.ipynb  02-pandas-fundamentals.ipynb  02_selection_and_indexing.ipynb  03-data-visualization.ipynb  03_cleaning_and_transformations.ipynb  04-statistical-analysis.ipynb  04_merging_and_joining.ipynb  05_groupby_and_aggregation.ipynb  06_reshaping_and_pivoting.ipynb  07_exporting_and_saving.ipynb
reference/glossary/: index.html
reference/resources/: index.html
search/: search_index.json
