[project]
name = "data-wizardry-with-python"
version = "0.1.0"
description = "A comprehensive training repository for transitioning from R and SPSS to Python and pandas"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    {name = "Kristiyan Bonev", email = "k.s.bonev@gmail.com"}
]
maintainers = [
    {name = "Kristiyan Bonev", email = "k.s.bonev@gmail.com"}
]
keywords = ["python", "pandas", "data-analysis", "training", "analytics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core dependencies
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "openpyxl>=3.1.0",
    "pyreadstat>=1.2.0",
]

# Optional dependency groups
[dependency-groups]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "pymdown-extensions>=10.0.0",
]

# Development tools (testing, linting, formatting)
dev = [
    "pytest (>=8.3.0,<9.0.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
    "pytest-asyncio (>=0.24.0,<0.25.0)",
    "flake8 (>=7.1.0,<8.0.0)",
    "flake8-pyproject (>=1.2.3,<2.0.0)",
    "black (>=24.0.0,<25.0.0)",
    "mypy (>=1.13.0,<2.0.0)",
    "isort (>=5.13.0,<6.0.0)",
    "pip-audit (>=2.9.0,<3.0.0)"
]

# Data science extras
ds = [
    "scikit-learn>=1.3.0",
    "plotly>=5.17.0",
    "bokeh>=3.2.0",
]

# All optional dependencies
all = [
    "data-wizardry-with-python[docs,dev,ds]",
]

[project.urls]
Homepage = "https://gitlab.com/your-org/Data-Wizardry-with-Python"
Documentation = "https://gitlab.com/your-org/Data-Wizardry-with-Python"
Repository = "https://gitlab.com/your-org/Data-Wizardry-with-Python"
Issues = "https://gitlab.com/your-org/Data-Wizardry-with-Python/-/issues"

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
